# Space-War

./: .gitignore  KNOWN_BUGS  Makefile  Makefile.in  README  README.md  RELATORIO  bibfis.c  bibfis.h  configure.in  configure.scan  exemplo2.txt  exemplo3.txt  exemplo4.txt  fila.c  fila.h  graficos.c  graficos.h  main  main.c  nave.c  nave.h  out  planeta.c  planeta.h  projetil  projetil.c  projetil.h
Dados/: exemplo.txt  exemplo2.txt  exemplo3.txt  exemplo4.txt  init.txt  monitor.txt
imagens/: cenario.xpm  oficial-plan.xcf  oficial-plan.xpm  planeta.xcf  planeta.xpm
imagens/TARDIS/: tardis0.xpm  tardis112'30.xpm  tardis135.xpm  tardis180.xpm  tardis22'30.xpm  tardis225.xpm  tardis247'30.xpm  tardis315.xpm  tardis67'30.xpm
imagens/explosao/: bum.xpm  bum_n1.xpm  bum_n2.xpm
imagens/loading/: loading-0.xpm  loading-1.xpm  loading-2.xpm  loading-3.xpm  loading-4.xpm  loading-5.xpm  loading-6.xpm  loading-7.xpm  loading-8.xpm
imagens/naves/: nave1-00.xpm  nave1-01.xpm  nave1-02.xpm  nave1-03.xpm  nave1-04.xpm  nave1-05.xpm  nave1-06.xpm  nave1-07.xpm  nave1-08.xpm  nave1-09.xpm  nave1-10.xpm  nave1-11.xpm  nave1-111.50.xpm  nave1-12.xpm  nave1-13-2.xpm  nave1-13.xpm  nave1-14.xpm  nave1-15.xpm  nave1-16.xpm  nave1-267.60.xpm  nave1-44.60.xpm  nave2-00.xpm  nave2-01.xpm  nave2-02.xpm  nave2-03.xpm  nave2-04.xpm  nave2-05.xpm  nave2-06.xpm  nave2-07.xpm  nave2-08.xpm  nave2-09.xpm  nave2-10.xpm  nave2-11.xpm  nave2-111.50.xpm  nave2-12.xpm  nave2-13.xpm  nave2-14.xpm  nave2-15.xpm  nave2-16.xpm  nave2-289.90.xpm  (+1 more)
imagens/projeteis/: projetil-00.xpm  projetil-01.xpm  (+15 more)
(+37 files in other folders)
